# scherzo

./: .gitignore  .gitmodules  .gitpod.yml  ARCHITECTURE.md  Caddyfile  Cargo.toml  Dockerfile  README.md  build.rs  deny.toml  example_config.toml  flake.nix  rust-toolchain.toml  scherzo.service
.cargo/: config.toml
.github/workflows/: deploy.yml  nix.yml  rust.yml
nix/: build.nix  common.nix  devShell.nix  sledtool.patch
resources/: email-token-template.html  email-token-template.txt
scherzo_derive/: Cargo.toml
scherzo_derive/src/: lib.rs
src/: append_list.rs  config.rs  db.rs  error.rs  ivec.rs  key.rs  lib.rs  main.rs
src/db/: migration.rs  mod.rs  noop.rs  sled.rs  sqlite.rs
src/db/migration/: add_account_kind.rs  add_next_msg_ids.rs  initial_db_version.rs  mod.rs  proto_v2.rs  remove_log_chan_id_from_admin_keys.rs  timestamps_are_milliseconds.rs
src/impls/: admin_action.rs  against.rs  auth.rs  batch.rs  chat.rs  emote.rs  media.rs  mediaproxy.rs  mod.rs  profile.rs  rest.rs  sync.rs  voice.rs
src/impls/auth/: begin_auth.rs  check_logged_in.rs  delete_user.rs  federate.rs  key.rs  login_federated.rs  mod.rs  next_step.rs  step_back.rs  stream_steps.rs
src/impls/auth/next_step/: delete_user.rs  email.rs  email_body_template.txt  login.rs  registration.rs  reset_password.rs
src/impls/batch/: batch.rs  batch_same.rs  mod.rs
src/impls/chat/: mod.rs  stream_events.rs  trigger_action.rs
src/impls/chat/channels/: create_channel.rs  delete_channel.rs  get_guild_channels.rs  mod.rs  typing.rs  update_all_channel_order.rs  update_channel_information.rs  update_channel_order.rs
src/impls/chat/guilds/: create_direct_message.rs  create_guild.rs  create_private_channel.rs  create_room.rs  delete_guild.rs  get_guild.rs  get_guild_list.rs  get_guild_members.rs  join_guild.rs  leave_guild.rs  mod.rs  preview_guild.rs  update_guild_information.rs  upgrade_room_to_guild.rs
src/impls/chat/invites/: create_invite.rs  delete_invite.rs  delete_outgoing_invite.rs  get_guild_invites.rs  get_outgoing_invites.rs  get_pending_invites.rs  ignore_pending_invite.rs  invite_user_to_guild.rs  mod.rs  reject_pending_invite.rs
src/impls/chat/messages/: add_reaction.rs  delete_message.rs  get_channel_messages.rs  get_message.rs  get_pinned_messages.rs  mod.rs  pin_message.rs  remove_reaction.rs  send_message.rs  unpin_message.rs  update_message_content.rs  update_message_text.rs
src/impls/chat/moderation/: ban_user.rs  get_banned_users.rs  kick_user.rs  mod.rs  unban_user.rs
src/impls/chat/permissions/: add_guild_role.rs  delete_guild_role.rs  get_guild_roles.rs  get_permissions.rs  get_user_roles.rs  give_up_ownership.rs  grant_ownership.rs  has_permission.rs  manage_user_roles.rs  mod.rs  modify_guild_role.rs  move_role.rs  query_has_permission.rs  set_permissions.rs
src/impls/chat/private_channels/: create_private_channel.rs  delete_private_channel.rs  get_private_channel.rs  get_private_channel_data.rs  get_private_channel_list.rs  join_private_channel.rs  leave_private_channel.rs  mod.rs  update_private_channel.rs  update_private_channel_members.rs  update_private_channel_name.rs
src/impls/emote/: add_emote_to_pack.rs  create_emote_pack.rs  delete_emote_from_pack.rs  delete_emote_pack.rs  dequip_emote_pack.rs  equip_emote_pack.rs  get_emote_pack_emotes.rs  get_emote_packs.rs  mod.rs
src/impls/mediaproxy/: can_instant_view.rs  fetch_link_metadata.rs  instant_view.rs  mod.rs
src/impls/profile/: get_app_data.rs  get_profile.rs  mod.rs  set_app_data.rs  update_profile.rs  update_status.rs
src/impls/rest/: about.rs  download.rs  mod.rs  upload.rs
src/impls/sync/: mod.rs  notify_new_id.rs  pull.rs  push.rs
src/impls/voice/: mod.rs  stream_message.rs
src/impls/webrtc/: mod.rs  stream_message.rs
src/utils/: either.rs  evec.rs  http_ratelimit.rs  mod.rs  ratelimit.rs  test.rs
