[workspace]
members = ["scherzo_derive"]

[package]
name = "scherzo"
version = "0.1.0"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2018"

[features]
default = ["sled"]
console = ["console-subscriber", "tokio/tracing"]

[dependencies]
scherzo_derive = { path="./scherzo_derive" }
harmony_rust_sdk = { git="https://github.com/harmony-development/harmony_rust_sdk.git", branch="master", features=["gen_server", "gen_client", "rkyv"] }
sled = { version="0.34.6", features=["compression"], optional=true }
parking_lot = "0.11"
rand = "0.8"
tokio = { version="1.9", features=["macros", "rt-multi-thread"] }
tokio-util = "0.6.7"
tracing = "0.1"
tracing-subscriber = "0.2"
cached = { version="0.25", default-features=false, features=["proc_macro"] }
paste = "1.0"
serde = { version="1.0", features=["derive"] }
toml = "0.5"
sha3 = "0.9"
urlencoding = "2.0"
reqwest = { version="0.11", default-features=false, features=["rustls-tls-native-roots", "stream"] }
infer = { version="0.5", default-features=false }
dashmap = "4.0"
ahash = { version="0.7", default-features=false }
console-subscriber = { git="https://github.com/tokio-rs/console.git", branch="main", optional=true }
webpage = { git="https://github.com/yusdacra/webpage-rs.git", branch="chore/deps", default-features=false }
lazy_static = "1.4"
smol_str = { version="0.1", features=["serde"] }
git-version = "0.3"
triomphe = { version="0.1", default-features=false }
ed25519-compact = "0.1"
image = "0.23"
rkyv = "0.7"

# migration protocols
# sdk_migration_two = { package = "harmony_rust_sdk", git = "https://github.com/harmony-development/harmony_rust_sdk.git", rev = "dfcaca4ab04992afd47d21a6610bb8600cbe48b8" }

[profile.dev]
opt-level = 0
overflow-checks = true
debug-assertions = true
debug = false
codegen-units = 256
lto = false
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
overflow-checks = false
debug-assertions = false
debug = false
codegen-units = 1
panic = 'abort'

[package.metadata.nix]
app = true
build = true
library = true

[workspace.metadata.nix]
systems = ["x86_64-linux"]
devshell.packages = ["cargo-deny", "mkcert"]
nativeBuildInputs = ["lld_12"]
env.RUSTC_FORCE_INCREMENTAL = "1"

[package.metadata.nix.cachix]
name = "harmony"
key = "harmony.cachix.org-1:yv78QZHgS0UHkrMW56rccNghWHRz18fFRl8mWQ63M6E="

[patch.crates-io]
dashmap = { git="https://github.com/jackthomson2/dashmap.git", branch="master" }
warp = { git="https://github.com/yusdacra/warp.git", branch="chore/deps" }
markup5ever = { git="https://github.com/servo/html5ever.git", rev="0e03e1c2b1f63e81f831fd95b9eb8bbde18b7815" }
string_cache = { git="https://github.com/yusdacra/string-cache.git", branch="chore/deps" }
string_cache_codegen = { git="https://github.com/yusdacra/string-cache.git", branch="chore/deps" }
cached = { git="https://github.com/yusdacra/cached.git", branch="chore/deps" }
hrpc = { git="https://github.com/harmony-development/hrpc-rs.git", branch="feat/body" }
hrpc-build = { git="https://github.com/harmony-development/hrpc-rs.git", branch="feat/body" }
