[workspace]
members = ["scherzo_derive"]
resolver = "2"

[package]
name = "scherzo"
version = "0.1.0"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2021"
default-run = "scherzo"

[[bin]]
name = "scherzo_cmd"
path = "src/bin/cmd.rs"

[[bin]]
name = "scherzo_migrate"
path = "src/bin/migrate.rs"
required-features = ["sled", "sqlite"]

[features]
default = ["sled"]
voice = ["mediasoup"]
jemalloc = ["tikv-jemallocator"]

# dbs
sqlite = ["sqlx", "itertools"]

[dependencies]
scherzo_derive = { path = "./scherzo_derive" }
harmony_rust_sdk = { git = "https://github.com/harmony-development/harmony_rust_sdk.git", branch = "master", features = [
    "gen_server",
    "gen_client",
    "rkyv",
] }
hrpc = { version = "0.33", features = [
    "http_server",
    "http_hyper_client",
    "client",
    "server",
    "mock_client",
    "mock_server",
] }
hyper = { version = "0.14", features = ["http1", "http2", "runtime", "stream"] }
hyper-rustls = { version = "0.23", default-features = false, features = [
    "native-tokio",
    "http1",
    "http2",
] }
tower = { version = "0.4", default-features = false, features = ["limit"] }
tower-http = { version = "0.2", default-features = false, features = [
    "trace",
    "sensitive-headers",
    "map-response-body",
    "cors",
] }
multer = { version = "2.0", default-features = false, features = ["tokio-io"] }
sled = { version = "0.34.6", features = ["compression"], optional = true }
lettre = { version = "0.10.0-rc.4", default-features = false, features = [
    "smtp-transport",
    "pool",
    "hostname",
    "builder",
    "tokio1-rustls-tls",
] }

sqlx = { version = "0.5", default-features = false, features = [
    "sqlite",
    "runtime-tokio-rustls",
], optional = true }
itertools = { version = "0.10", default-features = false, features = [
    "use_std",
], optional = true }

rand = "0.8"
argon2 = "0.3"
ed25519-compact = "1"
sha3 = "0.10"
ahash = { version = "0.7", default-features = false }

tokio = { version = "1.9", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "tracing",
    "signal",
] }
tokio-util = "0.6.7"
swimmer = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "tracing-log",
    "smallvec",
    "fmt",
    "ansi",
    "std",
] }
console-subscriber = { git = "https://github.com/tokio-rs/console.git", branch = "main" }
opentelemetry = { version = "0.16", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.15", features = ["rt-tokio"] }
tracing-opentelemetry = { version = "0.16", default-features = false }

pin-project = "1"

dashmap = "5.0"
webpage = { git = "https://github.com/yusdacra/webpage-rs.git", branch = "chore/deps", default-features = false }
paste = "1.0"
parking_lot = "0.11"
lazy_static = "1.4"
smol_str = { version = "0.1", features = ["serde"] }
git-version = "0.3"
triomphe = { version = "0.1", default-features = false }
image = "0.23"
infer = { version = "0.5", default-features = false }
anyhow = "1"

urlencoding = "2.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rkyv = "0.7"

mediasoup = { version = "0.9", optional = true }

tikv-jemallocator = { git = "https://github.com/tikv/jemallocator.git", branch = "master", optional = true }

# migration protocols
# sdk_migration_two = { package = "harmony_rust_sdk", git = "https://github.com/harmony-development/harmony_rust_sdk.git", rev = "dfcaca4ab04992afd47d21a6610bb8600cbe48b8" }

[profile.dev]
opt-level = 0
overflow-checks = true
debug-assertions = true
debug = false
codegen-units = 256
lto = false
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
overflow-checks = false
debug-assertions = false
debug = false
codegen-units = 1
panic = 'abort'

[package.metadata.nix]
app = true
build = true
library = true

[workspace.metadata.nix]
systems = ["x86_64-linux"]
cCompiler = "clang_13"

[package.metadata.nix.cachix]
name = "harmony"
key = "harmony.cachix.org-1:yv78QZHgS0UHkrMW56rccNghWHRz18fFRl8mWQ63M6E="

[patch.crates-io]
markup5ever = { git = "https://github.com/servo/html5ever.git", rev = "0e03e1c2b1f63e81f831fd95b9eb8bbde18b7815" }
string_cache = { git = "https://github.com/yusdacra/string-cache.git", branch = "chore/deps" }
string_cache_codegen = { git = "https://github.com/yusdacra/string-cache.git", branch = "chore/deps" }
opentelemetry-jaeger = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", branch = "main" }
opentelemetry = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", branch = "main" }
swimmer = { git = "https://github.com/yusdacra/swimmer-rs.git", branch = "master" }
